src/test/ui/associated-item/associated-item-duplicate-bounds.stderr
error: generic parameters may not be used in const operations
  --> $DIR/associated-item-duplicate-bounds.rs:10:18
   |
LL |     links: [u32; A::LINKS],
   |                  ^^^^^^^^ cannot perform const operation using `A`
   |
   = note: type parameters may not be used in const expressions

error: aborting due to previous error

